--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-cache": "^1.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-ftp": "^1.1.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
