--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "gulp-ruby-sass": "^2.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0"
+  },
+  "dependencies": {
+    "bricks.js": "^1.8.0"
   }
 }
